<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/course_toolbar"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/course_text_view"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/course_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/course_total_fees_text_view"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/course_total_fees_text_view"
        app:layout_constraintEnd_toEndOf="@+id/course_text_view"
        app:layout_constraintStart_toStartOf="@+id/course_text_view"
        app:layout_constraintTop_toBottomOf="@+id/course_text_view" />

    <ScrollView
        android:id="@+id/courselist_scrollView"
        android:layout_width="270dp"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/course_total_fees_text_view"
        app:layout_constraintStart_toStartOf="@+id/course_total_fees_text_view"
        app:layout_constraintTop_toBottomOf="@+id/course_total_fees_text_view">

        <TextView
            android:id="@+id/courseList_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/courseList_text_view" />
    </ScrollView>

    <Button
        android:id="@+id/total_fees_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/total_fees_button"
        app:layout_constraintEnd_toEndOf="@+id/courselist_scrollView"
        app:layout_constraintStart_toStartOf="@+id/courselist_scrollView"
        app:layout_constraintTop_toBottomOf="@+id/courselist_scrollView" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="top|center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/total_fees_button"
        app:layout_constraintStart_toStartOf="@+id/total_fees_button"
        app:layout_constraintTop_toBottomOf="@+id/total_fees_button"
        android:orientation="horizontal">

    <Button
        android:id="@+id/course_next_button"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:text="@string/course_next_button" />

    <Button
        android:id="@+id/course_link_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:text="@string/course_link_button" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="400dp"
        android:layout_height="100dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout2">

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/course_next_button"
            app:layout_constraintStart_toStartOf="@+id/course_next_button"
            app:layout_constraintTop_toBottomOf="@+id/course_next_button">


            <Button
                android:id="@+id/course_detail_button"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/course_detail_button" />

            <Button
                android:id="@+id/course_start_service_button"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/course_start_service_button" />

            <Button
                android:id="@+id/course_stop_service_button"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/course_stop_service_button" />

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="top|center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        android:orientation="horizontal">


        <Button
            android:id="@+id/logout_button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/logout_button" />

        <Button
            android:id="@+id/write_to_firebase_button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/write_to_firebase_button" />

        <Button
            android:id="@+id/read_from_firebase_button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:textSize="12sp"
            android:text="@string/read_from_firebase_button" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>